projects/deja-js/component/styles/theming.scss
/** global mixins */
@use './mixins/loader'as loader;
@use './mixins/menu'as menu;
@use './mixins/popup'as popup;
@use './mixins/tree-list-borders'as treeListBorders;
@use './mixins/mat-form-field'as matFormField;

/* specials themes */
@use './material/material'as materialTheme;
@use './mixins/menu-theme'as menuTheme;

/** Components Themes */
@use '../chips/chips-theme'as chipsTheme;
@use '../circular-picker/circular-picker-theme'as circularPickerTheme;
@use '../color-picker/color-picker-theme'as colorPickerTheme;
@use '../data-grid/data-grid-theme'as dataGridTheme;
@use '../date-picker/date-picker-theme'as datePickerTheme;
@use '../date-selector/date-selector-theme'as dateSelectorTheme;
@use '../loaders/list-loader-theme'as listLoaderTheme;
@use '../message-box/message-box-theme'as messageBoxTheme;
@use '../mouse-dragdrop/mouse-dragdrop-theme'as mouseDragdropTheme;
@use '../numeric-stepper/numeric-stepper-theme'as numericStepperTheme;
@use '../popup/popup-theme'as popupTheme;
@use '../range/range-theme'as rangeTheme;
@use '../select/select-theme'as selectTheme;
@use '../sidenav/sidenav-theme'as sidenavTheme;
@use '../splitter/splitter-theme'as splitterTheme;
@use '../tooltip/tooltip-theme'as tooltipTheme;
@use '../tree-list/tree-list-theme'as treeListTheme;
@use '../viewport/viewport-theme'as viewportTheme;
@use '../v2/numeric-stepper/numeric-stepper-theme'as numericStepper2Theme;
@use '../v2/mouse-dragdrop/mouse-dragdrop-theme'as mouseDragdrop2Theme;
@use '../v2/tree-list/tree-list-theme'as treeList2Theme;
@use '../v2/viewport/viewport-theme'as viewport2Theme;

/** Font icons */
@import '~@fontsource/material-icons';

@mixin deja-theme($custom-theme) {
    @include chipsTheme.chips-theme($custom-theme);
    @include circularPickerTheme.circular-picker-theme($custom-theme);
    @include colorPickerTheme.color-picker-theme($custom-theme);
    @include dataGridTheme.data-grid-theme($custom-theme);
    @include datePickerTheme.date-picker-theme($custom-theme);
    @include dateSelectorTheme.date-selector-theme($custom-theme);
    @include menu.deja-menu();
    @include popup.deja-popup();
    @include treeListBorders.deja-tree-list-borders();
    @include matFormField.mat-form-field-unit();
    @include listLoaderTheme.list-loader-theme($custom-theme);
    @include loader.loader-theme($custom-theme);
    @include materialTheme.deja-material-theme($custom-theme);
    @include menuTheme.menu-theme($custom-theme);
    @include messageBoxTheme.message-box-theme($custom-theme);
    @include mouseDragdropTheme.mouse-dragdrop-theme($custom-theme);
    @include numericStepperTheme.numeric-stepper-theme($custom-theme);
    @include popupTheme.popup-theme($custom-theme);
    @include rangeTheme.range-theme($custom-theme);
    @include selectTheme.select-theme($custom-theme);
    @include sidenavTheme.sidenav-theme($custom-theme);
    @include splitterTheme.splitter-theme($custom-theme);
    @include tooltipTheme.tooltip-theme($custom-theme);
    @include treeListTheme.tree-list-theme($custom-theme);
    @include viewportTheme.viewport-theme($custom-theme);
    @include mouseDragdrop2Theme.mouse-dragdrop-2-theme($custom-theme);
    @include treeList2Theme.tree-list-2-theme($custom-theme);
    @include viewport2Theme.viewport-2-theme($custom-theme);
    @include numericStepper2Theme.numeric-stepper-2-theme($custom-theme);
}

